MODIFIED: Changed Projection NonKeyAttribute to object type

--- a/template.yaml
+++ b/template.yaml
@@ -269,7 +269,8 @@ Resources:
                         -   AttributeName: productid
                             KeyType: HASH
                     Projection: 
-                        -   NonKeyAttributes: code
+                        -   NonKeyAttributes: 
+                                -   code
                             ProjectionType: ALL
             AttributeDefinitions:
                 -   AttributeName: productid
