--- a/template.yaml
+++ b/template.yaml
@@ -266,12 +266,12 @@ Resources:
             GlobalSecondaryIndexes:
                 -   IndexName: productscodeIndex
                     KeySchema: 
-                        -   AttributeName: productid
-                            KeyType: HASH
+                        AttributeName: productid
+                        KeyType: HASH
                     Projection: 
-                        -   NonKeyAttributes: 
-                                -   code
-                            ProjectionType: ALL
+                        NonKeyAttributes: 
+                        -   code
+                        ProjectionType: ALL
             AttributeDefinitions:
                 -   AttributeName: productid
                     AttributeType: S
