MODIFIED: Changed Projection NonKeyAttribute to object type 3

--- a/template.yaml
+++ b/template.yaml
@@ -266,7 +266,7 @@ Resources:
             GlobalSecondaryIndexes:
                 -   IndexName: productscodeIndex
                     KeySchema: 
-                        AttributeName: productid
+                    -   AttributeName: productid
                         KeyType: HASH
                     Projection: 
                         NonKeyAttributes: 
