MODIFIED: Added ProvisionedTroughput into GlobalSecondaryIndexes

--- a/template.yaml
+++ b/template.yaml
@@ -272,6 +272,9 @@ Resources:
                         NonKeyAttributes: 
                         -   code
                         ProjectionType: ALL
+                    ProvisionedThroughput:
+                        ReadCapacityUnits: 5
+                        WriteCapacityUnits: 5
             AttributeDefinitions:
                 -   AttributeName: productid
                     AttributeType: S
