--- a/template.yaml
+++ b/template.yaml
@@ -266,7 +266,7 @@ Resources:
             GlobalSecondaryIndexes:
                 -   IndexName: productscodeIndex
                     KeySchema: 
-                    -   AttributeName: productid
+                    -   AttributeName: code
                         KeyType: HASH
                     Projection: 
                         ProjectionType: ALL
@@ -275,6 +275,8 @@ Resources:
                         WriteCapacityUnits: 5
             AttributeDefinitions:
                 -   AttributeName: productid
+                    AttributeType: S
+                -   AttributeName: code
                     AttributeType: S
             KeySchema:
                 -   AttributeName: productid
