--- a/template.yaml
+++ b/template.yaml
@@ -120,7 +120,7 @@ Resources:
                 lambdaGetCompany:
                     Type: Api
                     Properties:
-                        Path: /api/company/{companyid}
+                        Path: /api/company/{vatregnumber}
                         Method: GET
                 lambdaAddCompany:
                     Type: Api
@@ -279,10 +279,10 @@ Resources:
         Properties:
             TableName: companies
             AttributeDefinitions:
-                -   AttributeName: companyid
+                -   AttributeName: vatregnumber
                     AttributeType: S
             KeySchema:
-                -   AttributeName: companyid
+                -   AttributeName: vatregnumber
                     KeyType: HASH
             ProvisionedThroughput:
                 ReadCapacityUnits: 5
