MODIFIED: Added sonar property file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-#sonar.organization=<replace with your SonarCloud organization key>
-#sonar.projectKey=<replace with the key generated when setting up the project on SonarCloud>
+sonar.organization=gabriel-acevedo
+sonar.projectKey=Gabriel-Acevedo_tfm-aws
 
-#sonar.sources= ./src
+sonar.sources= ./src
